// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs :props :addable 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content"></div>
</div>
`;

exports[`Tabs :props :defaultValue 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content"></div>
</div>
`;

exports[`Tabs :props :disabled 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content"></div>
</div>
`;

exports[`Tabs :props :placement 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-left">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-left">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-left"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content"></div>
</div>
`;

exports[`Tabs :props :size 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content"></div>
</div>
`;

exports[`Tabs :props :theme 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-tabs__nav--card t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content"></div>
</div>
`;

exports[`Tabs :props :value 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content"></div>
</div>
`;

exports[`Tabs additional function no valid panel 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content">123</div>
</div>
`;

exports[`Tabs additional function panel default slot:function | panel slot:function 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
            <div id="1" class="t-tabs__nav-item t-size-m">
              1
              <!---->
            </div>
            <div id="2" class="t-tabs__nav-item t-is-active t-size-m">
              2
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content">
    <!---->
    <div class="t-tab-panel"><span></span></div>
  </div>
</div>
`;

exports[`Tabs additional function panel:default && panel:panel 1`] = `
<div class="t-tabs">
  <div class="t-tabs__header t-is-top">
    <div class="t-tabs__nav">
      <!---->
      <div class="t-tabs__nav-container t-is-top">
        <!---->
        <!---->
        <div class="t-tabs__nav-scroll">
          <div class="t-tabs__nav-wrap">
            <div class="t-tabs__bar t-is-top"></div>
            <div id="1" class="t-tabs__nav-item t-size-m">
              1
              <!---->
            </div>
            <div id="2" class="t-tabs__nav-item t-is-active t-size-m">
              2
              <!---->
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div class="t-tabs__content">
    <!---->
    <div class="t-tab-panel">2</div>
  </div>
</div>
`;
